--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/frontend/dist/$1"
+    }
+  ],
   "functions": {
-    "api/calculate-depreciation.js": {
-      "maxDuration": 10
-    },
-    "api/health.js": {
-      "maxDuration": 10
-    },
-    "api/test.js": {
-      "maxDuration": 10
+    "api/*.js": {
+      "runtime": "@vercel/node@3.0.0"
     }
   },
   "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/dist",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "outputDirectory": "frontend/dist"
 }
